fixed about scroll spacing

--- a/style.css
+++ b/style.css
@@ -674,12 +674,4 @@ body{
     padding:45px 20px;
   }
 
-  #about{
-    scroll-margin-top: 20px;
-
-  }
-  #contact{
-    scroll-margin-top: 20px;
-  }
-
 }
